--- a/retrieve-tester.html
+++ b/retrieve-tester.html
@@ -102,6 +102,17 @@
         gap: 12px;
         box-shadow: 0 12px 32px rgba(191, 155, 126, 0.25);
       }
+      .cards-section__controls {
+        display: flex;
+        flex-wrap: wrap;
+        gap: 12px;
+        align-items: flex-end;
+      }
+      .cards-section__controls label {
+        min-width: 200px;
+        font-weight: 600;
+        color: #7a5a47;
+      }
       details.accordion {
         border: 1px solid #ead0c0;
         border-radius: 16px;
@@ -569,6 +580,19 @@
 
       <section class="cards-section">
         <h2 class="section-title" style="margin-bottom: 0">Response Cards</h2>
+        <div class="cards-section__controls">
+          <label>
+            Score 최소값
+            <input
+              id="scoreFilterInput"
+              type="number"
+              step="0.0001"
+              placeholder="예) 0.25"
+              min="0"
+              max="1"
+            />
+          </label>
+        </div>
         <div id="responseCards" class="results-grid">
           <p class="muted">API 호출 후 검색 결과 카드가 여기에 표시됩니다.</p>
         </div>
@@ -600,6 +624,8 @@
       const requestPreview = document.getElementById("requestPreview");
       const responseOutput = document.getElementById("responseOutput");
       const responseCards = document.getElementById("responseCards");
+      const scoreFilterInput = document.getElementById("scoreFilterInput");
+      let lastApiResponse = null;
 
       function addQueryField(value = "") {
         const row = document.createElement("div");
@@ -765,13 +791,12 @@
           try {
             parsed = JSON.parse(text);
             responseOutput.textContent = JSON.stringify(parsed, null, 2);
-            renderResponseCards(parsed);
+            lastApiResponse = parsed;
+            renderResponseCards();
           } catch {
             responseOutput.textContent = text || "(빈 응답)";
-            renderResponseCards(
-              null,
-              "JSON 응답이 아니어서 카드로 표시할 수 없습니다."
-            );
+            lastApiResponse = null;
+            renderResponseCards("JSON 응답이 아니어서 카드로 표시할 수 없습니다.");
           }
 
           if (!response.ok) {
@@ -782,17 +807,22 @@
         } catch (error) {
           setStatus(`요청 실패: ${error.message}`, true);
           responseOutput.textContent = "네트워크 에러가 발생했습니다.";
-          renderResponseCards(
-            null,
-            "네트워크 에러로 결과를 불러오지 못했습니다."
-          );
+          lastApiResponse = null;
+          renderResponseCards("네트워크 에러로 결과를 불러오지 못했습니다.");
         }
       });
 
-      function renderResponseCards(apiResponse, emptyMessage) {
+      function getScoreThreshold() {
+        if (!scoreFilterInput) return null;
+        const value = parseFloat(scoreFilterInput.value);
+        return Number.isFinite(value) ? value : null;
+      }
+
+      function renderResponseCards(emptyMessage) {
         if (!responseCards) return;
         responseCards.innerHTML = "";
 
+        const apiResponse = lastApiResponse;
         const results = apiResponse?.results;
         if (!Array.isArray(results) || !results.length) {
           const message = document.createElement("p");
@@ -821,8 +851,15 @@
           header.append(queryLabel, queryText);
           group.appendChild(header);
 
+          const threshold = getScoreThreshold();
           const documents = Array.isArray(result?.retrieved_documents)
-            ? result.retrieved_documents.filter(Boolean)
+            ? result.retrieved_documents
+                .filter(Boolean)
+                .filter((doc) => {
+                  if (threshold === null) return true;
+                  const scoreValue = parseFloat(doc?.score);
+                  return Number.isFinite(scoreValue) && scoreValue >= threshold;
+                })
             : [];
 
           if (!documents.length) {
@@ -1049,6 +1086,11 @@
         document.execCommand("copy");
         document.body.removeChild(textarea);
       }
+
+      scoreFilterInput?.addEventListener("input", () => {
+        if (!lastApiResponse) return;
+        renderResponseCards();
+      });
 
       renderResponseCards();
     </script>
